--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- .imagen header -->
         <div class="texto-header">
           <p class="tagline-producto">Sonido Profesional</p>
-          <h1 class="nombre-producto">TechPRO</h1>
+          <h1 class="nombre-producto degradado-verde">TechPRO</h1>
           <p class="descripcion-producto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, exercitationem! Fugiat accusamus facere distinctio, ipsa nihil hic dicta laboriosam cum sint temporibus necessitatibus perferendis reiciendis soluta, autem officiis maxime animi? </p>
           <p class="precio-producto">Desde <span>$299</span></p>
         </div>
