--- a/index.html
+++ b/index.html
@@ -51,10 +51,49 @@
         <div class="texto-header">
           <p class="tagline-producto">Sonido Profesional</p>
           <h1 class="nombre-producto degradado-verde">TechPRO</h1>
-          <p class="descripcion-producto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, exercitationem! Fugiat accusamus facere distinctio, ipsa nihil hic dicta laboriosam cum sint temporibus necessitatibus perferendis reiciendis soluta, autem officiis maxime animi? </p>
+          <p class="descripcion-producto">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+            exercitationem! Fugiat accusamus facere distinctio, ipsa nihil hic
+            dicta laboriosam cum sint temporibus necessitatibus perferendis
+            reiciendis soluta, autem officiis maxime animi?
+          </p>
           <p class="precio-producto">Desde <span>$299</span></p>
         </div>
       </div>
     </header>
+    <section class="contenedor">
+      <div class="iconos">
+        <div class="icono">
+          <img src="img/icono-sonido.svg" alt="imagen icono" />
+          <h3>Gran Sonido</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+            dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
+            delectus impedit nulla qui accusantium, repellendus aliquid error
+            perferendis non ad unde? Explicabo!
+          </p>
+        </div>
+        <div class="icono">
+          <img src="img/icono-garantia.svg" alt="imagen icono" />
+          <h3>Garantía de por vida</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+            dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
+            delectus impedit nulla qui accusantium, repellendus aliquid error
+            perferendis non ad unde? Explicabo!
+          </p>
+        </div>
+        <div class="icono">
+          <img src="img/icono-bateria.svg" alt="imagen icono" />
+          <h3>+20 Horas de Batería</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+            dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
+            delectus impedit nulla qui accusantium, repellendus aliquid error
+            perferendis non ad unde? Explicabo!
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
