:art: Se agrega estilo a la sección de información de los audífonos Tech Pro. Se introducen estilos CSS para la sección 'sobre Tech Pro', que incluye un fondo con gradiente y una imagen, adaptándose a diferentes tamaños de pantalla.

--- a/index.html
+++ b/index.html
@@ -95,5 +95,18 @@
         </div>
       </div>
     </section>
+    <section class="sobre-tech">
+      <div class="contenedor sobre-tech-grid">
+        <div class="texto-sobre-tech">
+          <h2>Sobre los <span>TechPRO</span></h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae,
+            quibusdam. Fuga vel culpa consectetur dolores soluta non tenetur
+            necessitatibus quis voluptatem sed vero facere, nostrum deleniti
+            totam aliquid. Eveniet, commodi?
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
