--- a/index.html
+++ b/index.html
@@ -108,5 +108,22 @@
         </div>
       </div>
     </section>
+    <main class="contenerdor modelos">
+      <h2 class="text-center">Elige tus TechPRO</h2>
+      <div class="listado-modelos">
+        <div class="modelo modelo-x">
+          <h3>TechPRO X</h3>
+          <p class="precio">$299</p>
+        </div>
+        <div class="modelo modelo-y">
+          <h3>TechPRO Y</h3>
+          <p class="precio">$399</p>
+        </div>
+        <div class="modelo modelo-z">
+          <h3>TechPRO Z</h3>
+          <p class="precio">$499</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
