:page_facing_up: Agregar HTML y estilos CSS para la sección de newsletter en el header. Se introdujo el código HTML y estilos CSS para la sección de newsletter en el header, incluyendo diseño, imágenes y un formulario.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
       </div>
     </section>
     <main class="contenerdor modelos">
-      <h2 class="text-center degradado-verde header-modelos">Elige tus TechPRO</h2>
+      <h2 class="text-center degradado-verde header-modelos">
+        Elige tus TechPRO
+      </h2>
       <div class="listado-modelos">
         <div class="modelo modelo-x">
           <h3>TechPRO X</h3>
@@ -125,5 +127,25 @@
         </div>
       </div>
     </main>
+
+    <section class="newsletter">
+      <div class="contenido-newsletter contenedor">
+        <div class="texto-newsletter">
+          <h2>Recibe actualizaciones</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+            quisquam blanditiis itaque reiciendis ea dolorem enim atque eos
+            nihil. Voluptates maxime doloribus et molestiae ab nesciunt ad
+            quidem magni doloremque?
+          </p>
+          <form action="" class="formulario">
+            <div class="input">
+              <input type="text" placeholder="Tu Email" />
+            </div>
+            <input type="submit" value="Inscribirme" name="" id="">
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
