--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
             <source
               sizes="1920w"
-              srcset="img/header.jpg 1920w"
+              srcset="img/header.png 1920w"
               type="image/jpeg"
             />
 
             <img
               loading="lazy"
               decoding="async"
-              src="img/header.jpg"
+              src="img/header.png"
               alt="Imagen Audifonos"
               lazyalt="imagen"
               width="1000"
@@ -142,10 +142,15 @@
             <div class="input">
               <input type="text" placeholder="Tu Email" />
             </div>
-            <input type="submit" value="Inscribirme" name="" id="">
+            <input type="submit" value="Inscribirme" name="" id="" />
           </form>
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <p>Todos los derechos reservados</p>
+    </footer>
+    <script src="js/imagenes.js"></script>
   </body>
+
 </html>
