--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h3>Garantía de por vida</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
-            dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
+            dolores assumenda ullam distinctio ipsam, maxime dignissimos
             delectus impedit nulla qui accusantium, repellendus aliquid error
             perferendis non ad unde? Explicabo!
           </p>
