--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <img src="img/icono-bateria.svg" alt="imagen icono" />
           <h3>+20 Horas de Batería</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+            Lorem ipsum dolor amet consectetur adipisicing elit. Doloremque,
             dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
             delectus impedit nulla qui accusantium, repellendus aliquid error
             perferendis non ad unde? Explicabo!
