--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>
             Lorem ipsum dolor amet consectetur adipisicing elit. Doloremque,
             dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
-            delectus impedit nulla qui accusantium, repellendus aliquid error
+            delectus impedit qui accusantium, repellendus aliquid error
             perferendis non ad unde? Explicabo!
           </p>
         </div>
