--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae,
             quibusdam. Fuga vel culpa consectetur dolores soluta non tenetur
-            necessitatibus quis voluptatem sed vero facere, nostrum deleniti
+            necessitatibus quis voluptatem sed facere, nostrum deleniti
             totam aliquid. Eveniet, commodi?
           </p>
         </div>
