--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
             dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
-            delectus impedit nulla qui accusantium, repellendus aliquid error
+            delectus impedit nulla qui accusantium, repellendus aliquid 
             perferendis non ad unde? Explicabo!
           </p>
         </div>
@@ -102,7 +102,7 @@
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae,
             quibusdam. Fuga vel culpa consectetur dolores soluta non tenetur
-            necessitatibus quis voluptatem sed facere, nostrum deleniti
+            necessitatibus quis voluptatem sed facere, nostrum 
             totam aliquid. Eveniet, commodi?
           </p>
         </div>
@@ -154,3 +154,4 @@
   </body>
 
 </html>
+
