--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p class="descripcion-producto">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
             exercitationem! Fugiat accusamus facere distinctio, ipsa nihil hic
-            dicta laboriosam cum sint temporibus necessitatibus perferendis
+            dicta laboriosam cum sint temporibus necessitatibus 
             reiciendis soluta, autem officiis maxime animi?
           </p>
           <p class="precio-producto">Desde <span>$299</span></p>
@@ -88,7 +88,7 @@
           <h3>+20 Horas de Batería</h3>
           <p>
             Lorem ipsum dolor amet consectetur adipisicing elit. Doloremque,
-            dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
+            dolores assumenda ullam distinctio ipsam natus, maxime
             delectus impedit qui accusantium, repellendus aliquid error
             perferendis non ad unde? Explicabo!
           </p>
@@ -102,7 +102,7 @@
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae,
             quibusdam. Fuga vel culpa consectetur dolores soluta non tenetur
-            necessitatibus quis voluptatem sed facere, nostrum 
+            necessitatibus quis voluptatem sed facere,
             totam aliquid. Eveniet, commodi?
           </p>
         </div>
@@ -154,4 +154,5 @@
   </body>
 
 </html>
+
 
