--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
             dolores assumenda ullam distinctio ipsam, maxime dignissimos
-            delectus impedit nulla qui accusantium, repellendus aliquid error
+            delectus impedit nulla qui accusantium,
             perferendis non ad unde? Explicabo!
           </p>
         </div>
@@ -154,5 +154,6 @@
   </body>
 
 </html>
+
 
 
