--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
             dolores assumenda ullam distinctio ipsam natus, maxime dignissimos
-            delectus impedit nulla qui accusantium, repellendus aliquid 
+            delectus impedit, repellendus aliquid 
             perferendis non ad unde? Explicabo!
           </p>
         </div>
@@ -154,6 +154,7 @@
   </body>
 
 </html>
+
 
 
 
