--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class="tagline-producto">Sonido Profesional</p>
           <h1 class="nombre-producto degradado-verde">TechPRO</h1>
           <p class="descripcion-producto">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+            Lorem ipsum dolor sit amet  elit. Dolorem,
             exercitationem! Fugiat accusamus facere distinctio, ipsa nihil hic
             dicta laboriosam cum sint temporibus necessitatibus 
             reiciendis soluta, autem officiis maxime animi?
@@ -154,6 +154,7 @@
   </body>
 
 </html>
+
 
 
 
